Fix CORS configuration for Railway deployment